@@ -228,7 +228,7 @@ concat([1,2],[3,4]~)
 concat([])
 concat(List())
 mathnfmod([1;2],2)
-polsturm(x^2)
+polsturm(x^2*1.)
 removeprimes(2)
 forstep(a=1,2,0,)
 e=ellinit([1,1+O(31^2)]);
